# lakehouse-demo

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  prek.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  fetch_jars.sh  start_spark_connect.sh
airflow/: Dockerfile  requirements.txt
airflow/dags/: daily_bronze.py  football_etl.py
dags/: main_pipeline.py
docs/: adr_unit_testing.md  architecture.md  diagram_pre_commit.mermaid.js  folder_structure.md  how_to_refresh_cassettes.md  setup_guide.md  spec_airflow_integration_tests.md  spec_scraper_unit_tests.md  spec_unit_testing.md  spec_warehouse_unit_tests.md  test_approach.md  test_approach_2.md  test_approach_3.md  test_guide_contract_testing.md  test_guide_global_idempotency_contract.md  test_unit.md  todo.md
notebooks/: tmp.ipynb
scripts/: airflow_entrypoint.sh  check_health.sh  container_entrypoint.sh  dev_setup.sh  generate_cassettes.sh  generate_mock_data.py  hotswap_network.sh  init_dev_net.sh  initial_setup.py  pre_commit.sh  pre_push.sh  seed_data.py
src/: exceptions.py
src/dags/: pl_lakehouse_daily.py
src/duckdb/: extraction.py  gold_views.sql
src/jobs/: silver.py
src/queries/: gold.py  schemas.py
src/schemas/: gold_efficiency_anomalies.sql  gold_player_resilience_index.sql  gold_squad_health_drag.sql  silver_analytics_match_squad_health_deficit.sql  silver_analytics_player_injury_summary.sql  silver_dim_injury.sql  silver_dim_player.sql  silver_dim_team.sql  silver_fact_match.sql  silver_fact_roster.sql  silver_fact_shot.sql
src/scraper/: premier_injuries.py  understat.py
src/scrapers/: network_client.py  parsers.py
src/spark/: transformations.py
src/transforms/: entity_resolution.py  injuries.py  metrics.py  normalisation.py
src/utils/: string_cleaner.py  validation.py
tests/unit/: conftest.py
tests/unit/entity_resolution/: test_players.py  test_teams.py
tests/unit/idempotency/: test_duckdb_queries.py  test_spark_jobs.py
tests/unit/orchestration/: test_dags.py
tests/unit/scd2/: test_injuries.py
tests/unit/scraper/: conftest.py  test_premier_injuries.py  test_scraper_data_extraction.py  test_scraper_network_handshake.py  test_scraper_utils.py  tst_understat.py
tests/unit/scraper/cassettes/test_scraper_network_handshake/: test_premier_injuries_handshake_success.yaml  test_understat_handshake_success[https---understat.com-https---understat.com].yaml  test_understat_handshake_success[https---understat.com-league-EPL-2025-https---understat.com-getLeagueData-EPL-2025].yaml  test_understat_handshake_success[https---understat.com-match-29088-https---understat.com-getMatchData-29088].yaml  test_understat_header_drop_forbidden[https---understat.com-https---understat.com].yaml  test_understat_header_drop_forbidden[https---understat.com-league-EPL-2025-https---understat.com-getLeagueData-EPL-2025].yaml  test_understat_header_drop_forbidden[https---understat.com-match-29088-https---understat.com-getMatchData-29088].yaml
tests/unit/scraper/fixtures/: injury_table.html  premier_injuries_duplicate_player.html  premier_injuries_missing_table.html  understat_duplicate_rosters.json  understat_duplicate_shots.json  understat_epl_2025.json  understat_match_29088.html  understat_missing_script.html  understat_rosters_shots_29088.json
tests/unit/transforms/: conftest.py  test_entity_resolution_teams.py  test_gold_queries.py  test_idempotency_spark_jobs.py  test_scd2_injuries.py  test_silver_metrics.py  test_silver_transformations.py
trino/catalog/: iceberg.properties
