[project]
name = "pl-lakehouse"
version = "0.1.0"
description = "E2E Premier League Lakehouse with 3NF, SCD2, and DAMA-aligned Data Quality"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "Data Engineer", email = "engineer@example.com" }]
dependencies = [
    "pyspark[connect]>=3.5.0,<3.6.0",       # FIX: Pin minor bounds to maintain core alignment with Airflow
    "grpcio-status>=1.48.1",
    "numpy<2.0.0",
    "duckdb>=0.10.0",
    "pandas>=2.1.0,<2.2.0",
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",
    "rapidfuzz>=3.6.0",
    "lxml>=5.1.0",
    "playwright>=1.42.0",
    "playwright-stealth>=1.0.6",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cryptography<47.0.0",
    "apache-airflow>=2.8.0,<2.9.0",        # FIX: Protect package mapping layout against version collision
    "apache-airflow-providers-common-sql",
    "apache-airflow-providers-amazon",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-recording>=0.13.0", # FIX: Added VCR cassette engine for offline parser testing
    "responses>=0.25.0",
    "pyiceberg[s3fs]>=0.6.0",
    "ruff>=0.3.0",
    "prek>=0.1.0",
    "ipykernel>=6.29.0",
    "mypy>=1.9.0",
    "types-requests",
    "types-beautifulsoup4",
    "pandas-stubs",
    "boto3-stubs[s3]",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
managed = true
package = false

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
strict = true
ignore_missing_imports = true
disallow_any_generics = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

# FIX: Added Airflow library skips. This prevents strict Mypy rule evaluation
# from throwing type errors on native Airflow operators and imports during commit hooks.
[[tool.mypy.overrides]]
module = "airflow.*"
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
addopts = "-m 'not integration'"
markers = ["integration: marks tests that require Docker/MinIO services"]
# FIX: Added an extra warning block filter to suppress downstream VCR py312 framework deprecation notifications
filterwarnings = [
    "ignore:Stealth has already been applied:UserWarning",
    "ignore:.*vcr.*:DeprecationWarning",
    "ignore:.*distutils.*:DeprecationWarning",
    "ignore:.*__version__.*attribute is deprecated.*:DeprecationWarning:airflow.utils.timezone"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
